--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,10 @@ svg {
   height: 24px;
   width: 24px;
 }
+
+.gradient-text{
+  background-image: linear-gradient(90deg,#4624E0,#e5e3f0);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
