--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,3 +41,40 @@ svg {
   background-clip: text;
   -webkit-background-clip: text;
 }
+
+.custom-select {
+  /* Hide the default arrow */
+  -webkit-appearance: none;
+  /* For Chrome, Safari, and newer versions of Opera */
+  -moz-appearance: none;
+  /* For Firefox */
+  /* For modern browsers */
+  appearance: none;
+  padding-right: 2.5rem;
+  /* Space for the custom arrow */
+  padding-left: 2.5rem;
+  /* Space for the round div */
+}
+
+.icon-container {
+  position: absolute;
+  top: 50%;
+  left: 0.5rem;
+  transform: translateY(-50%);
+  pointer-events: none;
+  /* Prevents the div from capturing click events */
+}
+
+.custom-arrow {
+  position: absolute;
+  top: 50%;
+  right: 0.5rem;
+  transform: translateY(-50%);
+  pointer-events: none;
+  /* Prevents the arrow from capturing click events */
+}
+
+.relative {
+  position: relative;
+  /* Ensures the custom arrow and round div are positioned correctly */
+}
