--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  /* colors */
+  --color-primary: #6137db;
+  --color-white: #ffffff;
+  --color-steel: #4a525d;
+  --color-light-grey: #ebebeb;
+  --color-disabled: #d6d3d1;
+  --color-text-light-grey: #aca7ba;
+  --color-off-white: #f5f5f5;
+  --color-neutral-dark: #170d23;
+  --color-white-purple-shade: #f8f7fa;
+  --color-light-purple-shade: #faf5ff;
+  --color-light-purple-graph: #d3cffc;
+  --color-purple-white-shade: #f7f5ff;
+  --color-logout: #ff0000;
+  --color-logout-bg: #fff5f5;
+
+  --color-scroll-linear-gradient: linear-gradient(
+    180deg,
+    rgba(235, 235, 235, 0) 20%,
+    rgba(235, 235, 235, 1) 25%,
+    rgba(235, 235, 235, 1) 75%,
+    rgba(235, 235, 235, 1) 80%,
+    rgba(235, 235, 235, 0) 100%
+  );
+}
+
 /* WebKit-based browsers (Chrome, Safari) */
 .body-scroll::-webkit-scrollbar {
   width: 12px !important;
